--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
+        passphrase: ${{ secrets.PASSWORD }}
         key: ${{ secrets.KEY1 }}
         port: ${{ secrets.PORT }}
         script: whoami
