invoice dates to defaults

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
           cd ~/www/dashboard.element-acoustics.com/dashboard/
           git pull
           php artisan migrate:fresh --seed
+          php artisan optimize:clear
           
 #php artisan optimize:clear
